testing/errors/valuenotdefined1.a
;ACME 0.97
	* = $200
	!by example
